Add tagbar plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "snippets"]
 	path = snippets
 	url = http://github.com/jimf/snipmate-snippets.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = http://github.com/majutsushi/tagbar.git
