--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/Align"]
 	path = bundle/Align
 	url = https://github.com/vim-scripts/Align.git
+[submodule "bundle/BufOnly"]
+	path = bundle/BufOnly
+	url = https://github.com/vim-scripts/BufOnly.vim.git
