--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "bundle/swap-parameters"]
 	path = bundle/swap-parameters
 	url = https://github.com/vim-scripts/swap-parameters.git
+[submodule "bundle/gist"]
+	path = bundle/gist
+	url = git@github.com:jimf/gist-vim.git
