--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "bundle/vim-tmux-navigator"]
 	path = bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
+[submodule "bundle/vim-reason-legacy"]
+	path = bundle/vim-reason-legacy
+	url = https://github.com/reasonml-editor/vim-reason-legacy
