--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "bundle/vim-reason-legacy"]
 	path = bundle/vim-reason-legacy
 	url = https://github.com/reasonml-editor/vim-reason-legacy
+[submodule "bundle/rust.vim"]
+	path = bundle/rust.vim
+	url = https://github.com/rust-lang/rust.vim.git
