--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "bundle/vim-crystal"]
 	path = bundle/vim-crystal
 	url = https://github.com/rhysd/vim-crystal.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
