--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
+[submodule "pack/bundle/start/vim-projectionist"]
+	path = pack/bundle/start/vim-projectionist
+	url = https://github.com/tpope/vim-projectionist.git
