--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "pack/bundle/start/vim-grepper"]
 	path = pack/bundle/start/vim-grepper
 	url = https://github.com/mhinz/vim-grepper.git
+[submodule "pack/bundle/start/ctrlp"]
+	path = pack/bundle/start/ctrlp
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
