--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "pack/bundle/start/ctrlp"]
 	path = pack/bundle/start/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "pack/bundle/start/vim-abolish"]
+	path = pack/bundle/start/vim-abolish
+	url = https://github.com/tpope/vim-abolish.git
