--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "pack/bundle/start/vim-json"]
 	path = pack/bundle/start/vim-json
 	url = https://github.com/elzr/vim-json.git
+[submodule "pack/bundle/start/vim-jsx-pretty"]
+	path = pack/bundle/start/vim-jsx-pretty
+	url = https://github.com/MaxMEllon/vim-jsx-pretty.git
