Add auto-pairs plugin
Trying out as an alternative to delimitMate. Overall I love delimitMate,
but frequently run into a bug where `[<CR>` doesn't indent properly when
inside curly braces. I'm not _positive_ if this is due to delimitMate,
but it's certainly possible. Trying this plugin out as an alternative,
as I've seen a few references to it claiming it's better.

--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "pack/bundle/start/vim-javascript"]
 	path = pack/bundle/start/vim-javascript
 	url = https://github.com/pangloss/vim-javascript.git
+[submodule "pack/bundle/start/auto-pairs"]
+	path = pack/bundle/start/auto-pairs
+	url = https://github.com/jiangmiao/auto-pairs.git
